# mqtt-manager

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  supervisord.conf
.github/workflows/: build.yml  ci.yml  publish.yml
core/: Cargo.toml
core/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/pages/: Acl.jsx  Broker.jsx  Clients.jsx  Inspector.jsx  Topics.jsx  Users.jsx
frontend/src/styles/: global.css
scripts/: dev.sh
