[package]
name = "mqtt-manager-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "MQTT Manager — web GUI backend for Eclipse Mosquitto MQTT broker"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rumqttc = "0.24"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
